--- a/scaler-vergleich.ipynb
+++ b/scaler-vergleich.ipynb
@@ -105,7 +105,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔍 Scaler: StandardScaler\n",
+      " Scaler: StandardScaler\n",
       "  KMeans       | ARI: 0.0599 | NMI: 0.1617 | Sil: 0.2297 | Acc: 0.1818\n",
       "  GMM          | ARI: 0.0575 | NMI: 0.1529 | Sil: 0.1745 | Acc: 0.1823\n",
       "  DBSCAN       | ARI: 0.0000 | NMI: 0.0010 | Sil: -0.2505 | Acc: 0.3913\n"
@@ -125,7 +125,7 @@
      "text": [
       "  Spectral     | ARI: 0.0333 | NMI: 0.2153 | Sil: 0.0584 | Acc: 0.1440\n",
       "\n",
-      "🔍 Scaler: MinMaxScaler\n",
+      " Scaler: MinMaxScaler\n",
       "  KMeans       | ARI: 0.1667 | NMI: 0.3721 | Sil: 0.2632 | Acc: 0.2885\n",
       "  GMM          | ARI: 0.1889 | NMI: 0.4099 | Sil: 0.0841 | Acc: 0.2977\n",
       "  DBSCAN       | ARI: 0.0393 | NMI: 0.2268 | Sil: 0.3989 | Acc: 0.1844\n"
@@ -145,13 +145,13 @@
      "text": [
       "  Spectral     | ARI: 0.0488 | NMI: 0.2516 | Sil: -0.0982 | Acc: 0.2053\n",
       "\n",
-      "🔍 Scaler: RobustScaler\n",
+      "Scaler: RobustScaler\n",
       "  KMeans       | ARI: 0.0000 | NMI: 0.0008 | Sil: 0.9898 | Acc: 0.0927\n",
       "  GMM          | ARI: 0.0000 | NMI: 0.0008 | Sil: 0.9898 | Acc: 0.0927\n",
       "  DBSCAN       | ARI: 0.0000 | NMI: 0.0101 | Sil: -0.5251 | Acc: 0.4450\n",
       "  Spectral     | ARI: 0.0889 | NMI: 0.2647 | Sil: -0.0394 | Acc: 0.2137\n",
       "\n",
-      "🔍 Scaler: Log+StandardScaler\n",
+      " Scaler: Log+StandardScaler\n",
       "  KMeans       | ARI: 0.0545 | NMI: 0.1506 | Sil: 0.2313 | Acc: 0.1812\n",
       "  GMM          | ARI: 0.0941 | NMI: 0.1493 | Sil: 0.1589 | Acc: 0.2196\n",
       "  DBSCAN       | ARI: -0.0000 | NMI: 0.0021 | Sil: -0.3176 | Acc: 0.5405\n"
@@ -201,7 +201,7 @@
     "results = []\n",
     "\n",
     "for scaler_name, scaler in scalers.items():\n",
-    "    print(f\"\\n🔍 Scaler: {scaler_name}\")\n",
+    "    print(f\"\\n Scaler: {scaler_name}\")\n",
     "    \n",
     "    # Skalierung vorbereiten\n",
     "    if scaler_name == \"Log+StandardScaler\":\n",
@@ -250,7 +250,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "📊 Vergleichstabelle:\n",
+      " Vergleichstabelle:\n",
       "            Scaler Clusterer           ARI      NMI  Silhouette  Accuracy\n",
       "      MinMaxScaler       GMM  1.889053e-01 0.409898    0.084145  0.297659\n",
       "      MinMaxScaler    KMeans  1.667088e-01 0.372146    0.263182  0.288532\n",
@@ -330,7 +330,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "🔍 Vergleich aller Scaler:\n",
+      " Vergleich aller Scaler:\n",
       "Scaler                    ARI      NMI   Silhouette\n"
      ]
     },
